--- a/package.json
+++ b/package.json
@@ -4,8 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@storybook/react": "7.0.20",
+    "@storybook/react-vite": "7.0.20",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "@types/react": "^18.2.9",
+    "@types/react-dom": "^18.2.4",
+    "mafs": "^0.17.0",
     "prettier": "^2.8.8",
-    "typescript": "^5.1.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "7.0.20",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   },
-  "packageManager": "yarn@3.6.0"
+  "peerDependencies": {
+    "mafs": "^0.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "packageManager": "yarn@3.6.0",
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
+  }
 }
